--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^9.121.2",
     "@react-three/fiber": "^9.0.0-alpha.8",
     "@types/react-lottie": "^1.2.10",
+    "@vercel/speed-insights": "^1.1.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.0",
     "mini-svg-data-uri": "^1.4.4",
